@@ -1,3 +1,10 @@
+2013-07-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp,
+	  src/stm8/gen.c,
+	  src/stm8/ralloc2.cc:
+	  Implement direct jump from comparison, eliminating temporary; fix operand handling in multiplication.
+
 2013-07-21 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCglobl.h,
